@@ -15,6 +15,8 @@ Revision history for Test-BrewBuild
           config file (closes #248)
         - modify warning and die() if in dispatch auto mode and a tester isn't
           available (closes #234)
+        - dispatcher is now properly informed if a repo is invalid, and the
+          testers continue to run as opposed to croaking (fixes #251)
 
 2.21    2019-06-07
         - modified text in dispatch auto mode LCD output (closes #233)
